OO-2967: wording, more pushed updates in UI...

--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_de.properties
@@ -1,5 +1,5 @@
 #Fri Sep 30 15:06:20 CEST 2016
-assessment.mode.now=Es gibt derzeit eine Pr\u00FCfung. 
+assessment.mode.now=Der Pr\u00FCfungmodus ist aktiv. 
 assessment.modes.overview=Pr\u00FCfungsmodus
 assessment.status.done=$org.olat.modules.assessment.ui\:assessment.status.done
 assessment.status.inProgress=$org.olat.modules.assessment.ui\:assessment.status.inProgress
@@ -44,7 +44,7 @@ participantgroups.title=Teilnehmer in Gruppen
 previous=Zur\u00FCck
 reopen=$org.olat.modules.assessment.ui\:reopen
 reset.attempts=Anzahl Versuche zur\u00FCcksetzen
-reset.attempts.explanation=Dieser Test wurde beendet. Sie k\u00F6nnen den Test erneut \u00F6ffnen. Der Testteilnehmende beginnt den Test wieder von vorne. Die anzahl Versuche wird auf 0 zur\u00FCckgesetzt. Die Daten der bisherigen Versuchen bleiben gespeichert.
+reset.attempts.explanation=Dieser Test wurde beendet. Sie k\u00F6nnen den Test erneut \u00F6ffnen. Der Testteilnehmende beginnt den Test wieder von vorne. Die Anzahl Versuche wird auf 0 zur\u00FCckgesetzt. Die Daten der bisherigen Versuche bleiben gespeichert.
 save.done=$org.olat.modules.assessment.ui\:save.done
 statistics.small.overview=$org.olat.modules.assessment.ui\:statistics.small.overview
 sub.details=Details
