OO-3110: Synchronising the item data betwenn the panels

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -165,7 +165,7 @@ process.draft.set=The status of the question has been changed to "$\:lifecycle.s
 process.final.set=The status of the question has been changed to "$\:lifecycle.status.finalVersion".
 process.endOfLife.set=The end of life has been set.
 process.not.reviewable=No review
-process.not.reviewable.message=It is not possible to review questions in the format 'QTI 1.2'. Please convert the question to the format 'QTI 2.1' previously.
+process.not.reviewable.message=It is not possible to review questions in the format 'QTI 1.2'. Please previously convert the question to the format 'QTI 2.1'.
 process.revised.set=The status of the question has been changed to "$\:lifecycle.status.revised".
 process.review=Review
 process.review.set=The status of the question has been changed to "$\:lifecycle.status.review".
