OO-3178: add batch actions to the administration of taxonomy

--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_de.properties
@@ -14,6 +14,7 @@ admin.configuration.title=Konfiguration Taxonomie
 admin.menu.title=Taxonomie
 admin.menu.title.alt=Taxonomie
 admin.taxonomy.trees=Taxonomie
+assign.type=Zuweisen
 atleast.one.competence=Sie m\u00FCssen mindestens ein editierbares Kompetenz w\u00E4hlen.
 confirm.delete.level.type.sucessfull=Der Ebenentyp "{0}" wurde erfolgreich gel\u00F6scht.
 confirm.deleted.level=Die Ebene wurde "{0}" erfolgreich gel\u00F6scht.
@@ -22,6 +23,7 @@ confirmation.delete.level=Wollen Sie wirklich die Ebene "{0}" l\u00F6schen?
 confirmation.delete.level.title=Ebene l\u00F6schen
 confirmation.delete.type=Wollen Sie wirklich den Ebenentyp "{0}" l\u00F6schen?
 confirmation.delete.type.title=Ebenentyp "{0}" l\u00F6schen
+confirm.merge.level=Die Ebene "{0}" wurde erfolgreich zusammengef\u00FChrt.
 confirmation.remove.competence=Wollen Sie wirklich die Kompetenz "{0}" f\u00FCr den Level "{1}" entfern?
 confirmation.remove.competence.title=Kompetenz entfernen
 create.taxonomy=Neue Taxonomie erstellen
@@ -31,12 +33,20 @@ details.delete=L\u00F6schen
 edit.competence.title=Kompetenz "{1}" von "{0}" editieren
 edit.competences=Kompetenz editieren
 edit.level.types=Typ editieren
+error.delete.num=Diese Taxonomieebene(n) enth\u00E4lt folgende Elemente:
+error.delete.num.competences=<strong>{0}</strong> Kompetenzbeziehungen
+error.delete.num.relations=<strong>{0}</strong> Lernobjekt Referenzen
+error.delete.num.child.levels=<strong>{0}</strong> Kinder-taxonomieebenen
+error.discontinuous.selection=Diskontinuierliche Auswahl von Taxonomieebenen wird nicht unterst\u00FCtzt.
+error.found.no.allowed.sub.types=Es wurde keine Ebenetyp der den Ebenentyp Konfiguration und den Auswahl entspricht.
 error.select.target.level=Sie m\u00FCssen eine Taxonomieebene w\u00E4hlen.
 error.sort.order.integer=Sortierung muss ein Ganzzahl sein.
 error.target.no.parent=Diese Taxonomieebene kann nicht dort geschoben werden.
+error.target.not.allowed=Diese Taxonomieebene kann nicht dort geschoben werden. Der Typ von den \u00FCbergeordnete Taxonomieebene erlaubt es nicht.
 filter.no.level.type=Ohne Ebenentyp
 have=Haben
 info.copy.level.type.sucessfull=Der Ebenentyp "{0}" wurde erfolgreich kopiert.
+info.delete.merge.to=Diese Elementen k\u00F6nnen in einem ander Taxonomieebene zusammengef\u00FChrt.
 insert.taxonomy.levels=Ebenentype hinzuf\u00FCgen
 level.description=Beschreibung
 level.directory.path=Tecknische Ordner
@@ -49,9 +59,13 @@ level.type.allowed.sub.types=Sub types
 level.type.cssClass=CSS class
 level.type.docs.enabled=Dokumenten einschalten
 level.visible=Sichtbar
+level.types.to.assign=Ebenentypen
 manage=Verwalten
+merge.taxonomy.level=Zusammenf\u00FChren
+merge.to=Zusammenf\u00FChren
 move.taxonomy.level=Verschieben
 move.taxonomy.level.title="{0}" verschieben
+move.taxonomy.levels.title=Verschieben
 my.taxonomies=Meine Taxonomie
 not.configured=Noch nicht konfiguriert\! Bitte ein Taxonomie in Administration w\u00E4hlen.
 not.implemented=Not implemented
@@ -114,5 +128,7 @@ taxonomy.metadata=Metadaten
 taxonomy.types=Ebenentypen
 teach=Dozieren
 tools=$\:table.header.actions
+type.taxonomy.level=Ebenentyp zuweisen
+warning.atleastone.level=Sie m\u00FCssen mindestens eine Ebene w\u00E4hlen dass Sie editieren d\u00FCrfen.
 warning.delete.level=Der Ebene darf nicht gel\u00F6scht werden. Er ist noch benutzt.
 warning.delete.level.type=Der Ebenentype wurde nicht gel\u00F6scht. Er ist noch benutzt.
