--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
@@ -14,6 +14,7 @@ admin.configuration.title=Configuration Taxonomy
 admin.menu.title=Taxonomy
 admin.menu.title.alt=Taxonomy
 admin.taxonomy.trees=Taxonomies
+assign.type=Assign
 atleast.one.competence=You must select at least one competence you can edit.
 confirm.delete.level.type.sucessfull=The level type "{0}" was successfully deleted.
 confirm.deleted.level=The level "{0}" was successfully  deleted.
@@ -22,6 +23,7 @@ confirmation.delete.level=Do you really want to delete the level "{0}"?
 confirmation.delete.level.title=Delete level
 confirmation.delete.type=Do you really want to delete this level type "{0}"?
 confirmation.delete.type.title=Delete level type "{0}"
+confirm.merge.level=The level(s) "{0}" was sucessfully merged.
 confirmation.remove.competence=Do you really want to remove the competence "{0}" for the level {1}?
 confirmation.remove.competence.title=Remove competence
 create.taxonomy=Create new taxonomy
@@ -31,12 +33,20 @@ details.delete=Delete
 edit.competence.title=Edit competence "{1}" of "{0}"
 edit.competences=Edit competences
 edit.level.types=Edit types
+error.delete.num=These taxonomy levels contains the following elements:
+error.delete.num.relations=<strong>{0}</strong> references to learn objects
+error.delete.num.competences=<strong>{0}</strong> competence relations
+error.delete.num.child.levels=<strong>{0}</strong> children taxonomy levels
+error.discontinuous.selection=Discontinous selection of taxonomy levels is not supported.
+error.found.no.allowed.sub.types=No level type was found which is compatible with the selection and the level types configuration.
 error.select.target.level=You must select a taxonomy level.
 error.sort.order.integer=Ordering number need to be an integer.
 error.target.no.parent=You cannot move the taxonomy level to this place.
+error.target.not.allowed=You cannot move the taxonomy level to this place. The type of the parent level doesn't allow it.
 filter.no.level.type=Without level type
 have=Have
 info.copy.level.type.sucessfull=The level type "{0}" was successfully copied.
+info.delete.merge.to=These elements can be merged in an other taxonomy level.
 insert.taxonomy.levels=Insert new taxonomy levels
 level.description=Description
 level.directory.path=Technical path
@@ -48,10 +58,14 @@ level.type=Type
 level.type.allowed.sub.types=Sub types
 level.type.cssClass=CSS class
 level.type.docs.enabled=Documents enabled
+level.types.to.assign=Level types
 level.visible=Visible
 manage=Manage
+merge.taxonomy.level=Merge
+merge.to=Merge
 move.taxonomy.level=Move
 move.taxonomy.level.title=Move "{0}"
+move.taxonomy.levels.title=Move
 my.taxonomies=My taxonomies
 not.configured=Not configured\! Please choose a taxonomy in the administration.
 not.implemented=Not implemented
@@ -113,5 +127,7 @@ taxonomy.metadata=Metadata
 taxonomy.types=Levels types
 teach=Teach
 tools=$\:table.header.actions
+type.taxonomy.level=Assign level type
+warning.atleastone.level=You must at least one taxonomy level you can edit.
 warning.delete.level=The level cannot be deleted because it is still in use.
 warning.delete.level.type=The level type "{0}" was not deleted because it is still in use.
