OO-3221: replace the html editor in the QTI course element

--- a/src/main/java/org/olat/commons/info/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/commons/info/ui/_i18n/LocalStrings_en.properties
@@ -2,7 +2,7 @@
 already.deleted=This message has been deleted in the meantime by another user.
 already.edited=This message is being edited by user {0}. Please try again later.
 attachment=File
-attachment.max.size=$org.olat.commons.file.filechooser\:error.limit.exceeded
+attachment.max.size=File upload is limited to {0} KB. This limit was exceeded.
 create_message=Create message
 display.info=Published by {0} on {1}
 display.info.noauthor=Published on {0}
