--- a/src/main/java/org/olat/commons/info/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/commons/info/ui/_i18n/LocalStrings_fr.properties
@@ -2,7 +2,7 @@
 already.deleted=Entretemps, cette communication a \u00E9t\u00E9 effac\u00E9 par un autre utilisateur.
 already.edited=Cette communication est actuellement en cours d'\u00E9laboration par l'utilisateur {0}. R\u00E9essayez plus tard, svp.
 attachment=Fichier
-attachment.max.size=$org.olat.commons.file.filechooser\:error.limit.exceeded
+attachment.max.size=La transmission de fichiers est limit\u00E9e \u00E0 {0} KB. La limite a \u00E9t\u00E9 d\u00E9pass\u00E9e.
 create_message=Cr\u00E9er communication
 display.info=Publi\u00E9 par {0} le {1}
 display.info.noauthor=Publi\u00E9 le {0}
