--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_cs.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_cs.properties
@@ -1,4 +1,5 @@
 #Thu Sep 03 11:24:43 CEST 2015
+allowRelativeLinks=Umo\u017Enit odkazy do cel\u00E9 skladovac\u00ED slo\u017Eky
 Intro.self=Pro spu\u0161t\u011Bn\u00ED autotestu zma\u010Dkn\u011Bte tla\u010D\u00EDtko start.
 Intro.surv=Pro spu\u0161t\u011Bn\u00ED dotazn\u00EDku zma\u010Dkn\u011Bte tla\u010D\u00EDtko start.
 Intro.test=Pro spu\u0161t\u011Bn\u00ED testu zma\u010Dkn\u011Bte tla\u010D\u00EDtko start.
@@ -62,6 +63,7 @@ error.surv.undefined.long=Pro "{0}" nedefinov\u00E1n \u017E\u00E1dn\u00FD dotazn
 error.surv.undefined.short=Pro "{0}" nedefinov\u00E1n \u017E\u00E1dn\u00FD dotazn\u00EDk.
 error.test.undefined.long=Pro "{0}" nedefinov\u00E1n \u017E\u00E1dn\u00FD test. Vybrat.
 error.test.undefined.short=Pro "{0}" nedefinov\u00E1n \u017E\u00E1dn\u00FD test.
+fieldset.allowRelativeLinksForm=Bezpe\u010Dnostn\u00ED nastaven\u00ED
 fieldset.chosecreateeditfile=Vlo\u017Eit po\u010D\u00E1te\u010Dn\u00ED test
 file.name=Vybran\u00FD soubor
 
