--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -1,4 +1,5 @@
 #Thu Dec 07 19:14:06 CET 2017
+allowRelativeLinks=Allow links in the entire storage folder.
 Intro.self=Press the start button to begin with your self-test.
 Intro.surv=Press the start button to begin with your questionnaire.
 Intro.test=Press the start button to begin with your test.
@@ -58,6 +59,7 @@ extra.time=Prolong
 extra.time.explain.1=Prolong the time for the user(s) "{0}" of
 extra.time.explain.2=minutes.
 extra.time.warning=<strong>Warning\:</strong> The time in assessment mode will not be prolonged. The assessment mode can be prolonged in menu Assessment mode.
+fieldset.allowRelativeLinksForm=Security settings
 fieldset.chosecreateeditfile=Information (HTML page)
 file.name=Selected file
 hour.short=h
