--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_es.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_es.properties
@@ -1,4 +1,5 @@
 #Thu Sep 03 11:24:42 CEST 2015
+allowRelativeLinks=Permitir enlaces en toda la carpeta de dep\u00F3sito
 Intro.self=Presiona el bot\u00F3n  de inicio para comenzar el auto-test.
 Intro.surv=Presiona el bot\u00F3n de inicio para comenzar el cuestionario.
 Intro.test=Presiona el bot\u00F3n de inicio para comenzar el test.
@@ -64,6 +65,7 @@ error.surv.undefined.long=No se ha definido un cuestionario para "{0}". Elige un
 error.surv.undefined.short=No se ha definido un cuestionario para "{0}".
 error.test.undefined.long=No se ha definido un test para "{0}". Elige uno bajo "Configuraci\u00F3n Test".
 error.test.undefined.short=No se ha definido un test para "{0}".
+fieldset.allowRelativeLinksForm=Opciones de seguridad
 fieldset.chosecreateeditfile=Texto de informaci\u00F3n (P\u00E1gina HTML)
 file.name=Elegir archivo
 
