--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,5 @@
 #Thu Jul 06 20:47:43 CEST 2017
+allowRelativeLinks=Permettre la cr\u00E9ation de liens dans tout le dossier de stockage
 Intro.self=Pressez sur D\u00E9marrer pour commencer l'auto-test.
 Intro.surv=Pressez sur D\u00E9marrer pour commencer avec le questionnaire. 
 Intro.test=Pressez sur D\u00E9marrer pour commencer le test. 
@@ -52,6 +53,7 @@ error.surv.undefined.long=Aucun questionnaire d\u00E9fini pour "{0}". Choisissez
 error.surv.undefined.short=Aucun questionnaire d\u00E9fini pour "{0}".
 error.test.undefined.long=Aucun test d\u00E9fini pour "{0}". Choisissez dans "Configurez test".
 error.test.undefined.short=Aucun test d\u00E9fini pour "{0}".
+fieldset.allowRelativeLinksForm=Param\u00E8tres de s\u00E9curit\u00E9
 fieldset.chosecreateeditfile=Texte informatif (page html)
 file.name=Fichier choisi
 hour.short=h
