--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
@@ -1,4 +1,5 @@
 #Tue Mar 28 11:56:35 CEST 2017
+allowRelativeLinks=Permettere il collegamento in tutta la cartella di deposito
 Intro.self=Prema su "Avviare" per cominciare l'autotest.
 Intro.surv=Prema su "Avviare" per cominciare il questionario.
 Intro.test=Prema su "Avviare" per cominciare il test.
@@ -46,6 +47,7 @@ error.surv.undefined.long=Non \u00E8 definito alcun questionario per "{0}". Ne s
 error.surv.undefined.short=Non \u00E8 definito alcun questionario per "{0}".
 error.test.undefined.long=Non \u00E8 definito alcun test per "{0}". Ne selezioni uno sotto "Configurazione test/autotest/questionario".
 error.test.undefined.short=Non \u00E8 definito alcun test per "{0}".
+fieldset.allowRelativeLinksForm=Preferenza di sicurezza
 fieldset.chosecreateeditfile=Testo informativo (pagina HTML)
 file.name=File selezionato
 hour.short=h
