--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_lt.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_lt.properties
@@ -1,4 +1,5 @@
 #Wed Jul 28 13:33:30 CEST 2010
+allowRelativeLinks=Leisti nuorodas visose saugojimo laikmenose
 Intro.self=Spustel\u0117kite paleidimo mygtuk\u0105 nor\u0117dami prad\u0117ti savikontrol\u0119.
 Intro.surv=Spustel\u0117kite paleidimo mygtuk\u0105 nor\u0117dami prad\u0117ti apklaus\u0105.
 Intro.test=Spustel\u0117kite paleidimo mygtuk\u0105 nor\u0117dami prad\u0117ti test\u0105.
@@ -52,6 +53,7 @@ error.surv.undefined.long=N\u0117ra nustatyta apklausa \u201C{0}\u201D. Pasirink
 error.surv.undefined.short=N\u0117ra nustatyta apklausa \u201C{0}\u201D.
 error.test.undefined.long=N\u0117ra nustatytas testas \u201C{0}\u201D. Pasirinkite vien\u0105.
 error.test.undefined.short=N\u0117ra nustatytas testas \u201C{0}\u201D.
+fieldset.allowRelativeLinksForm=Saugumo nuostatos.
 fieldset.chosecreateeditfile=\u012Ed\u0117kite informacij\u0105
 file.name=Pasirinkit rinkmen\u0105
 
