--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_nl_NL.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_nl_NL.properties
@@ -1,4 +1,5 @@
 #Thu Sep 03 11:24:44 CEST 2015
+allowRelativeLinks=Sta links toe in de volledige opslagmap.
 Intro.self=Druk op de startknop om te beginnen met uw zelf-test.
 Intro.surv=Druk op de startknop om te beginnen met uw vragenlijst.
 Intro.test=Druk op de startknop om te beginnen met uw test.
@@ -96,6 +97,7 @@ error.surv.undefined.long=Geen vragenlijst voor "{0}" gedefinieerd. Kies er \u00
 error.surv.undefined.short=Geen vragenlijst voor "{0}" gedefinieerd.
 error.test.undefined.long=Geen test voor "{0}" gedefinieerd. Kies er \u00E9\u00E9n in de sectie "Test configuratie".
 error.test.undefined.short=Geen test voor "{0}" gedefinieerd.
+fieldset.allowRelativeLinksForm=Veiligheidsinstellingen
 fieldset.chosecreateeditfile=Informatie (HTML pagina)
 file.name=Geselecteerd bestand
 
