--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pl.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pl.properties
@@ -1,4 +1,5 @@
 #Mon Nov 14 00:24:42 CET 2016
+allowRelativeLinks=Dopuszczaj linki w ca\u0142ym folderze sk\u0142adowania
 Intro.self=Naci\u015Bnij przycisk start, aby rozpocz\u0105\u0107 test z samoocen\u0105.
 Intro.surv=Naci\u015Bnij przycisk start, aby rozpocz\u0105\u0107 ankiet\u0119.
 Intro.test=Naci\u015Bnij przycisk start, aby rozpocz\u0105\u0107 test.
@@ -38,6 +39,7 @@ error.surv.undefined.long=Brak zdefiniowanych ankiet dla "{0}". Wybierz kt\u00F3
 error.surv.undefined.short=Brak zdefiniowanych ankiet dla  "{0}".
 error.test.undefined.long=Brak zdefiniowanych test\u00F3w dla "{0}". Wybierz kt\u00F3ry\u015B.
 error.test.undefined.short=Brak zdefiniowanych test\u00F3w dla "{0}".
+fieldset.allowRelativeLinksForm=Opcja bezpiecze\u0144stwa
 fieldset.chosecreateeditfile=Informacja (plik HTML)
 file.name=Wybrany plik
 info.assessment=Wyniki Twoich test\u00F3w s\u0105 widoczne dla administrator\u00F3w i nauczycieli tego kursu. Wynik mo\u017Ce by\u0107 u\u017Cyty do innych oblicze\u0144 wewn\u0105trz kursu.
