--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_PT.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_PT.properties
@@ -1,4 +1,5 @@
 #Wed Jul 28 13:33:30 CEST 2010
+allowRelativeLinks=Permitir acesso na pasta de armazenamento
 Intro.self=Clicar o bot\u00E3o "Iniciar" para executar o auto-teste.
 Intro.surv=Clicar o bot\u00E3o "Iniciar" para executar a pesquisa.
 Intro.test=Clicar o bot\u00E3o "Iniciar" para executar o teste.
@@ -52,6 +53,7 @@ error.surv.undefined.long=Nenhuma pesquisa para "{0}" definido. Escolher um.
 error.surv.undefined.short=Nenhuma pesquisa para "{0}" definido.
 error.test.undefined.long=Nenhum teste para  "{0}" definido. Escolher um.
 error.test.undefined.short=Nenhum teste para  "{0}" definido.
+fieldset.allowRelativeLinksForm=Configura\u00E7\u00E3o de seguran\u00E7a
 fieldset.chosecreateeditfile=Informa\u00E7\u00E3o (arquivo HTML)
 file.name=Arquivo escolhido
 
