--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_sq.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_sq.properties
@@ -1,4 +1,5 @@
 #Wed Jul 28 13:33:32 CEST 2010
+allowRelativeLinks=Lejon vjeg\u00EBzat n\u00EB t\u00EBr\u00EB dosjen e ruajtjes.
 Intro.self=Ju lutemi shtypni pull\u00EBn nisje p\u00EBr t\u00EB filluar me vet-testimin.
 Intro.surv=Ju lutemi shtypni pull\u00EBn nisje p\u00EBr t\u00EB filluar me pyet\u00EBsorin.
 Intro.test=Ju lutemi shtypni pull\u00EBn nisje p\u00EBr t\u00EB filluar me testimin.
@@ -52,6 +53,7 @@ error.surv.undefined.long=Nuk \u00EBsht\u00EB p\u00EBrcaktuar ndonj\u00EB pyet\u
 error.surv.undefined.short=Nuk \u00EBsht\u00EB p\u00EBrcaktuar ndonj\u00EB pyet\u00EBsor p\u00EBr "{0}".
 error.test.undefined.long=Nuk \u00EBsht\u00EB p\u00EBrcaktuar ndonj\u00EB testim p\u00EBr "{0}". P\u00EBrzgjedhni ndonj\u00EB.
 error.test.undefined.short=Nuk \u00EBsht\u00EB p\u00EBrcaktuar ndonj\u00EB testim p\u00EBr "{0}".
+fieldset.allowRelativeLinksForm=P\u00EBrcaktimet e siguris\u00EB
 fieldset.chosecreateeditfile=Shto tekst fillestar 
 file.name=Zgjedh skedar 
 
