--- a/src/main/java/org/olat/commons/info/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/commons/info/ui/_i18n/LocalStrings_pt_BR.properties
@@ -2,7 +2,7 @@
 already.deleted=Esta mensagem foi apagada por outro usu\u00E1rio neste meio tempo.
 already.edited=Esta mensagem esta sendo editada pelo usu\u00E1rio {0}. Tente mais tarde.
 attachment=Arquivo
-attachment.max.size=$org.olat.commons.file.filechooser\:error.limit.exceeded
+attachment.max.size=O limite para carregar arquivo \u00E9 de {0} KB. Este limite foi excedido.
 create_message=Criar mensagem
 display.info=Publicada por {0} em {1}
 display.info.noauthor=Publicado em {0}
