--- a/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_de.properties
@@ -7,6 +7,7 @@ chooseLink=Datei ausw\u00E4hlen
 command.create=Seite erstellen und in Editor \u00F6ffnen
 command.edit=Datei im Editor \u00F6ffnen
 command.preview.label=Gew\u00E4hlte HTML - Datei
+command.remove=Seite entfernen
 createLink=Datei erstellen
 error.deleted=Die konfigurierte Datei existiert nicht. Erstellen Sie die Datei erneut oder w\u00E4hlen Sie eine neue Datei aus.
 error.name.empty=Bitte geben Sie einen Dateinamen ein
