--- a/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_en.properties
@@ -7,6 +7,7 @@ chooseLink=Choose File
 command.create=Create page and open in editor
 command.edit=Open page in editor
 command.preview.label=Selected HTML file
+command.remove=Remove page
 createLink=Create File
 error.deleted=The configured file does not exist. Create the file again or select another file.
 error.name.empty=Please insert a name for the file to be created
