--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_da.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_da.properties
@@ -1,28 +1,3 @@
 #Wed Jul 28 13:33:31 CEST 2010
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+allowRelativeLinks=Tillad links i hele gemmemappen
+fieldset.allowRelativeLinksForm=Sikkerhedsindstillinger
