--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -1,4 +1,5 @@
 #Tue Nov 15 16:23:43 CET 2016
+allowRelativeLinks=Verlinkung in gesamtem Ablageordner zulassen
 assessment.documents.title=Bewertungsdokumente
 Intro.self=Dr\u00FCcken Sie Start, um mit dem Selbsttest zu beginnen.
 Intro.surv=Dr\u00FCcken Sie Start, um mit dem Fragebogen zu beginnen.
@@ -59,6 +60,7 @@ extra.time=Verl\u00E4ngern
 extra.time.explain.1=Die Zeit f\u00FCr den User "{0}" um
 extra.time.explain.2=Minuten verl\u00E4ngern.
 extra.time.warning=<strong>Achtung:</strong> Die Zeit im Pr\u00FCfungsmodus wird nicht verl\u00E4ngert. Der Pr\u00FCfungsmodus muss im Menu Pr\u00FCfungsmodus verl\u00E4ngert werden.
+fieldset.allowRelativeLinksForm=Sicherheitseinstellung
 fieldset.chosecreateeditfile=Informationstext (HTML-Seite)
 file.name=Gew\u00E4hlte Datei
 info.assessment=Bei diesem Test k\u00F6nnen Ihre Resultate von den Administratoren und den Betreuern dieses Kurses eingesehen werden. 
