--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_el.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_el.properties
@@ -1,4 +1,5 @@
 #Thu Sep 03 11:24:42 CEST 2015
+allowRelativeLinks=\u0391\u03C0\u03BF\u03B4\u03BF\u03C7\u03AE \u03C3\u03C5\u03BD\u03B4\u03AD\u03C3\u03BC\u03C9\u03BD \u03C3\u03C4\u03BF \u03C6\u03AC\u03BA\u03B5\u03BB\u03BF \u03B1\u03C0\u03BF\u03B8\u03AE\u03BA\u03B5\u03C5\u03C3\u03B7\u03C2
 Intro.self=\u0393\u03B9\u03B1 \u03BD\u03B1 \u03BE\u03B5\u03BA\u03B9\u03BD\u03AE\u03C3\u03B5\u03C4\u03B5 \u03C4\u03BF \u03C4\u03B5\u03C3\u03C4 \u03B1\u03C5\u03C4\u03BF-\u03B1\u03BE\u03B9\u03BF\u03BB\u03CC\u03B3\u03B7\u03C3\u03B7\u03C2 \u03C0\u03B1\u03C4\u03AE\u03C3\u03C4\u03B5 \u03C4\u03BF \u03BA\u03BF\u03C5\u03BC\u03C0\u03AF \u0388\u03BD\u03B1\u03C1\u03BE\u03B7.
 Intro.surv=\u0393\u03B9\u03B1 \u03BD\u03B1 \u03BE\u03B5\u03BA\u03B9\u03BD\u03AE\u03C3\u03B5\u03C4\u03B5 \u03C4\u03BF \u03B5\u03C1\u03C9\u03C4\u03B7\u03BC\u03B1\u03C4\u03BF\u03BB\u03CC\u03B3\u03B9\u03BF \u03C0\u03B1\u03C4\u03AE\u03C3\u03C4\u03B5 \u03C4\u03BF \u03BA\u03BF\u03C5\u03BC\u03C0\u03AF \u0388\u03BD\u03B1\u03C1\u03BE\u03B7.
 Intro.test=\u0393\u03B9\u03B1 \u03BD\u03B1 \u03BE\u03B5\u03BA\u03B9\u03BD\u03AE\u03C3\u03B5\u03C4\u03B5 \u03C4\u03BF \u03C4\u03B5\u03C3\u03C4 \u03C0\u03B1\u03C4\u03AE\u03C3\u03C4\u03B5 \u03C4\u03BF \u03BA\u03BF\u03C5\u03BC\u03C0\u03AF \u0388\u03BD\u03B1\u03C1\u03BE\u03B7.
@@ -68,6 +69,7 @@ error.surv.undefined.long=\u0394\u03B5\u03BD \u03AD\u03C7\u03B5\u03B9 \u03BF\u03
 error.surv.undefined.short=\u0394\u03B5\u03BD \u03AD\u03C7\u03B5\u03B9 \u03BF\u03C1\u03B9\u03C3\u03C4\u03B5\u03AF \u03B5\u03C1\u03C9\u03C4\u03B7\u03BC\u03B1\u03C4\u03BF\u03BB\u03CC\u03B3\u03B9\u03BF \u03B3\u03B9\u03B1 \u03C4\u03BF "{0}". 
 error.test.undefined.long=\u0394\u03B5\u03BD \u03AD\u03C7\u03B5\u03B9 \u03BF\u03C1\u03B9\u03C3\u03C4\u03B5\u03AF \u03C4\u03B5\u03C3\u03C4 \u03B3\u03B9\u03B1 \u03C4\u03BF "{0}". \u03A0\u03B1\u03C1\u03B1\u03BA\u03B1\u03BB\u03BF\u03CD\u03BC\u03B5 \u03B5\u03C0\u03B9\u03BB\u03AD\u03BE\u03C4\u03B5 \u03BA\u03AC\u03C0\u03BF\u03B9\u03BF.
 error.test.undefined.short=\u0394\u03B5\u03BD \u03AD\u03C7\u03B5\u03B9 \u03BF\u03C1\u03B9\u03C3\u03C4\u03B5\u03AF \u03C4\u03B5\u03C3\u03C4 \u03B3\u03B9\u03B1 \u03C4\u03BF "{0}".
+fieldset.allowRelativeLinksForm=\u03A1\u03CD\u03B8\u03BC\u03AF\u03C3\u03B5\u03B9\u03C2 \u03B1\u03C3\u03C6\u03B1\u03BB\u03B5\u03AF\u03B1\u03C2
 fieldset.chosecreateeditfile=\u03A0\u03BB\u03B7\u03C1\u03BF\u03C6\u03BF\u03C1\u03AF\u03B5\u03C2 (\u03B1\u03C1\u03C7\u03B5\u03AF\u03BF HTML)
 file.name=\u0395\u03C0\u03B9\u03BB\u03B5\u03B3\u03BC\u03AD\u03BD\u03BF \u03B1\u03C1\u03C7\u03B5\u03AF\u03BF
 
