--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fa.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fa.properties
@@ -1,4 +1,5 @@
 #Wed Jul 28 13:33:32 CEST 2010
+allowRelativeLinks=\u0627\u062C\u0627\u0632\u0647 \u0648\u0627\u0631\u062F \u0634\u062F\u0646 \u0628\u0647 \u0634\u0627\u062E\u0647 \u0630\u062E\u06CC\u0631\u0647 \u0628\u0627 \u0627\u06CC\u0646 \u0644\u06CC\u0646\u06A9
 Intro.self=\u0628\u0631\u0627\u06CC \u0634\u0631\u0648\u0639 \u0645\u062C\u062F\u062F \u0627\u06CC\u0646 \u0622\u0632\u0645\u0648\u0646 \u062E\u0648\u062F \u0631\u0648\u06CC \u0627\u06CC\u0646 \u062F\u06A9\u0645\u0647 \u06A9\u0644\u06CC\u06A9 \u06A9\u0646\u06CC\u062F
 Intro.surv=\u0628\u0631\u0627\u06CC \u0634\u0631\u0648\u0639 \u067E\u0631\u0633\u0634\u0646\u0627\u0645\u0647 \u0631\u0648\u06CC \u0627\u06CC\u0646  \u062F\u06A9\u0645\u0647 \u06A9\u0644\u06CC\u06A9 \u06A9\u0646\u06CC\u062F
 Intro.test=\u0628\u0631\u0627\u06CC \u0634\u0631\u0648\u0639 \u0645\u062C\u062F\u062F \u0627\u06CC\u0646 \u0622\u0632\u0645\u0648\u0646 \u0631\u0648\u06CC \u0627\u06CC\u0646 \u062F\u06A9\u0645\u0647 \u06A9\u0644\u06CC\u06A9 \u06A9\u0646\u06CC\u062F
@@ -39,6 +40,7 @@ error.surv.undefined.long=No questionnaire for "{0}" defined. Choose one.
 error.surv.undefined.short=No questionnaire for "{0}" defined.
 error.test.undefined.long=No test for "{0}" defined. Choose one.
 error.test.undefined.short=No test for "{0}" defined.
+fieldset.allowRelativeLinksForm=\u062A\u0646\u0636\u06CC\u0645\u0627\u062A \u0627\u06CC\u0645\u0646\u06CC
 fieldset.chosecreateeditfile=\u0627\u0637\u0644\u0627\u0639\u0627\u062A
 file.name=\u0627\u0646\u062A\u062E\u0627\u0628 \u0641\u0627\u06CC\u0644
 
