--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_jp.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_jp.properties
@@ -1,4 +1,5 @@
 #Thu Sep 03 11:24:42 CEST 2015
+allowRelativeLinks=\u30B9\u30C8\u30EC\u30FC\u30B8\u30D5\u30A9\u30EB\u30C0\u5185\u3059\u3079\u3066\u306E\u30EA\u30F3\u30AF\u3092\u8A31\u53EF\u3057\u307E\u3059\u3002
 Intro.self=\u30BB\u30EB\u30D5\u30C6\u30B9\u30C8\u3092\u958B\u59CB\u3059\u308B\u306B\u306F\u3001\u30B9\u30BF\u30FC\u30C8\u30DC\u30BF\u30F3\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 Intro.surv=\u30A2\u30F3\u30B1\u30FC\u30C8\u3092\u958B\u59CB\u3059\u308B\u306B\u306F\u3001\u30B9\u30BF\u30FC\u30C8\u30DC\u30BF\u30F3\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 Intro.test=\u30C6\u30B9\u30C8\u3092\u958B\u59CB\u3059\u308B\u306B\u306F\u3001\u30B9\u30BF\u30FC\u30C8\u30DC\u30BF\u30F3\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002
@@ -85,6 +86,7 @@ error.surv.undefined.long=\u300C {0} \u300D\u306E\u30A2\u30F3\u30B1\u30FC\u30C8\
 error.surv.undefined.short=\u300C {0} \u300D\u306E\u8CEA\u554F\u304C\u5B9A\u7FA9\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 error.test.undefined.long=\u300C {0} \u300D\u306E\u30C6\u30B9\u30C8\u306F\u3001\u5B9A\u7FA9\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002\u300C\u30C6\u30B9\u30C8\u8A2D\u5B9A\u300D\u30BB\u30AF\u30B7\u30E7\u30F3\u306B\u3066\u3001\u30C6\u30B9\u30C8\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 error.test.undefined.short=\u300C {0} \u300D\u306E\u30C6\u30B9\u30C8\u306F\u3001\u5B9A\u7FA9\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+fieldset.allowRelativeLinksForm=\u30BB\u30AD\u30E5\u30EA\u30C6\u30A3\u8A2D\u5B9A
 fieldset.chosecreateeditfile=\u60C5\u5831 (HTML\u30DA\u30FC\u30B8)
 file.name=\u9078\u629E\u6E08\u307F\u30D5\u30A1\u30A4\u30EB
 
