--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_TW.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_TW.properties
@@ -1,4 +1,5 @@
 #Sat Sep 18 06:23:02 CEST 2010
+allowRelativeLinks=\u5141\u8A31\u5728\u6574\u500B\u5132\u5B58\u8CC7\u6599\u593E\u4E2D\u4F7F\u7528\u9023\u7D50
 Intro.self=\u6309\u4E0B\u958B\u59CB\u6309\u9215\u4F86\u958B\u59CB\u9032\u884C\u81EA\u6211\u6E2C\u9A57\u3002
 Intro.surv=\u6309\u4E0B\u958B\u59CB\u6309\u9215\u4F86\u958B\u59CB\u9032\u884C\u554F\u5377\u3002
 Intro.test=\u6309\u4E0B\u958B\u59CB\u6309\u9215\u4F86\u958B\u59CB\u9032\u884C\u6E2C\u9A57\u3002
@@ -45,6 +46,7 @@ error.surv.undefined.long=\u6C92\u6709\u554F\u5377\u8A2D\u5B9A\u7D66 "{0}"\u3002
 error.surv.undefined.short=\u6C92\u6709\u554F\u5377\u8A2D\u5B9A\u7D66 "{0}"\u3002
 error.test.undefined.long=\u6C92\u6709\u6E2C\u9A57\u8A2D\u5B9A\u7D66 "{0}"\u3002\u9078\u64C7\u4E00\u500B\u3002
 error.test.undefined.short=\u6C92\u6709\u6E2C\u9A57\u8A2D\u5B9A\u7D66 "{0}"\u3002
+fieldset.allowRelativeLinksForm=\u5B89\u5168\u6027\u8A2D\u5B9A
 fieldset.chosecreateeditfile=\u8CC7\u8A0A (HTML \u9801\u9762)
 file.name=\u9078\u53D6\u7684\u6A94\u6848
 
