no-jira: wording

--- a/src/main/java/de/bps/onyx/plugin/run/_i18n/LocalStrings_de.properties
+++ b/src/main/java/de/bps/onyx/plugin/run/_i18n/LocalStrings_de.properties
@@ -14,7 +14,7 @@ error.connectonyxws=Keine Verbindung zum OnyxPlugin m\u00F6glich.
 error0=
 error1=
 info.assessment=Bei diesem Test k\u00F6nnen Ihre Resultate von den Administratoren und den Betreuern dieses Kurses eingesehen werden.
-info.selfassessment=Bei diesem Selbsttest k\u00F6nnen Ihre Resultate von den Administratoren und den Betreuern dieses Kurses <b>nicht</b> eingesehen werden.
+info.selfassessment=Beim Selbsttest werden alle Eingaben anonym gespeichert.
 info.survey=Bei diesem Fragebogen werden Ihre Angaben anonymisiert abgespeichert.
 info.survey.alreadydone=Sie haben diesen Fragebogen bereits ausgef\u00FCllt, vielen Dank\!
 intro=Dr\u00FCcken Sie Start, um den Test zu beginnen.
