--- a/src/main/java/de/bps/onyx/plugin/run/_i18n/LocalStrings_en.properties
+++ b/src/main/java/de/bps/onyx/plugin/run/_i18n/LocalStrings_en.properties
@@ -14,7 +14,7 @@ error.connectonyxws=No connection to OnyxPlugin.
 error0=
 error1=
 info.assessment=Course administrators and tutors of this course will be able to see your results.
-info.selfassessment=Administrators as well as tutors will <b>not</b>be able to see your results of this self-test.
+info.selfassessment=For the self-test all entries are saved anonymously.
 info.survey=Any results of this questionnaire will be saved anonymously.
 info.survey.alreadydone=You have already filled in this questionnaire, thank you\!
 intro=Press start to begin with this test.
