--- a/src/main/java/de/bps/onyx/plugin/run/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/de/bps/onyx/plugin/run/_i18n/LocalStrings_fr.properties
@@ -14,7 +14,7 @@ error.connectonyxws=Connexion au plugin Onyx impossible.
 error0=
 error1=
 info.assessment=Les administrateurs et les tuteurs de ce cours peuvent voir vos r\u00E9sultats pour ce test.
-info.selfassessment=Les administrateurs et les tuteurs de ce cours <b>ne</b> peuvent <b>pas</b> voir vos r\u00E9sultats pour cet auto-test.
+info.selfassessment=Les données des auto-tests sont sauvées anonymement.
 info.survey=Vos r\u00E9ponses \u00E0 ce questionnaire sont enregistr\u00E9es de mani\u00E8re anonyme.
 info.survey.alreadydone=Vous avez d\u00E9j\u00E0 rempli ce questionnaire, merci\!
 intro=D\u00E9marrez et commencez le test.
