--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -65,7 +65,7 @@ fieldset.chosecreateeditfile=Informationstext (HTML-Seite)
 file.name=Gew\u00E4hlte Datei
 info.assessment=Bei diesem Test k\u00F6nnen Ihre Resultate von den Administratoren und den Betreuern dieses Kurses eingesehen werden. 
 info.nodedelete=Die bisher angefallenen Daten dieses Kursbausteins werden in Ihrem pers\u00F6nlichen Ordner unter private/archive/[Kursname]/. archiviert.
-info.selfassessment=Bei diesem Selbsttest k\u00F6nnen Ihre Resultate von den Administratoren und den Betreuern dieses Kurses <b>nicht</b> eingesehen werden.
+info.selfassessment=Beim Selbsttest werden alle Eingaben anonym gespeichert.
 info.survey=Bei diesem Fragebogen werden Ihre Angaben anonymisiert abgespeichert.
 info.survey.alreadydone=Sie haben diesen Fragebogen bereits ausgef\u00FCllt, vielen Dank\! Fragebogen k\u00F6nnen nur einmal ausgef\u00FCllt werden.
 inform.users=Teilnehmer informieren
