--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
@@ -59,7 +59,7 @@ file.name=Fichier choisi
 hour.short=h
 info.assessment=Pour ce test, les administrateurs et les tuteurs pourront consulter vos r\u00E9sultats. 
 info.nodedelete=Les donn\u00E9es r\u00E9sultant de cet \u00E9l\u00E9ment de cours sont archiv\u00E9es dans votre dossier personnel sous private/archive/[nom du cours]/.
-info.selfassessment=Pour cet auto-test, les administrateurs et les tuteurs <b>ne pourront pas</b> consulter vos r\u00E9sultats.
+info.selfassessment=Pour les auto-tests, les données sont sauvées anonymement.
 info.survey=Pour ce questionnaire, vos donn\u00E9es seront enregistr\u00E9es de fa\u00E7on anonyme. 
 info.survey.alreadydone=Vous avez d\u00E9j\u00E0 rempli ce questionnaire, merci beaucoup\! Les questionnaires ne peuvent \u00EAtre remplis qu'une seule fois.
 inform.users=Informer participants
