--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -65,7 +65,7 @@ file.name=Selected file
 hour.short=h
 info.assessment=Results of this test are visible to administrators and tutors of this course. 
 info.nodedelete=All user data of this course element will be archived in your personal folder, section private/archive/[coursename]/. 
-info.selfassessment=Results of this self-test are <b>not</b> visible to administrators and tutors of that course.
+info.selfassessment=For the self-test all entries are saved anonymously.
 info.survey=This questionnaire will be saved anonymously.
 info.survey.alreadydone=You have already filled in this questionnaire, thank you\! Questionnaires can only be filled in once.
 inform.users=Inform participants
