00-3110: Delete not used stuff

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -220,9 +220,7 @@ share.presentation.9=Pools freigegeben werden. Neben dem Standardkatalog kann es
 share.presentation.subtitle=Was muss ich tun?
 share.presentation.title=Freigaben
 shared=Freigegeben
-sharing=Freigabe / Autoren
-sharing.author.name=Name
-sharing.shares=Gruppen
+wharing.shares=Gruppen
 sharing.shares.empty.table=Diese Frage ist mit keiner Gruppe freigegeben.
 sharing.pools.empty.table=Diese Frage ist in keinem Pool freigegeben.
 source.status.draft=$\:lifecycle.status.draft ({0})
