no-jira: Wording

--- a/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_de.properties
@@ -11,7 +11,7 @@ document.pool.permissions=Zugangsberechtigungen
 document.pool.templates=Vorlagen
 document.pool.templates.directory=Vorlagen aktivieren
 document.pool.webdav.mount.point=WebDAV Mountpunkt
-edit.info.page=Infoseite editieren
+edit.info.page=Infoseite bearbeiten
 have.can.read=Lesender Zugriff gestatten
 have.competence=Haben-Kompetenz
 level.type=Kompetenztyp "{0}"
