OO-3116: Info page in question pool, remove descriptions in the tree sections

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -10,6 +10,7 @@ admin.studyfields.intro=Fachbereiche dienen der fachlichen Verschlagwortung der 
 admin.types.intro=Erstellen Sie zus\u00E4tzliche Fragetypen, wenn die Standard Fragetypen von OpenOLAT nicht gen\u00FCgen. Die Standard Fragetypen k\u00F6nnen nicht gel\u00F6scht werden. 
 average.rating.for.final=Durchschnittliche Bewertung f\u00FCr Status "final"
 collections.enabled=Listen
+create.infos.page=Infoseite erstellen
 create.level=Stufe erstellen
 create.license=Lizenz erstellen
 create.type=Fragetyp erstellen
@@ -21,6 +22,7 @@ delete.taxonomyLevel=L\u00F6schen
 delete.taxonomyLevel.confirm=Wollen Sie wirklich diese Fachbereich "{0}" l\u00F6schen?
 delete.type=L\u00F6schen
 delete.type.confirm=Wollen Sie wirklich diesen Typ l\u00F6schen?
+edit.info.page=Infoseite bearbeiten
 edit.taxonomyLevel=Fachbereich bearbeiten
 educational.context.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
 educational.context.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
@@ -49,6 +51,7 @@ review.process.confirm.enable.title=Beurteilungsprozess einschalten
 review.process.enabled=Beurteilungsprozess
 segment.configuration=Fragenpool
 segment.educational.context=Stufen
+segment.info.page=Infoseite
 segment.item.types=Fragetypen
 segment.licenses=Lizenzen
 segment.pools=Pool-Verwaltung
