--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -9,6 +9,7 @@ admin.review.process.title=Review process
 admin.studyfields.intro=Subjects allow for technical indexing the question items. It's organized as a hierarchical structure for modelling the potential degree programs. Select the "$\:add.taxonomyLevel" in order to create a new subject, or select an existing one for editing purposes.
 admin.types.intro=Create more question types if the existing default types aren't sufficient. Please note that the default question types can not be deleted.
 collections.enabled=Lists
+create.infos.page=Create infos page
 create.level=Create level
 create.license=Create license
 create.type=Create type
@@ -20,6 +21,7 @@ delete.license=Delete
 delete.license.confirm=Do you really want to delete this license?
 delete.type=Delete
 delete.type.confirm=Do you really want to delete this type?
+edit.info.page=Edit infos page
 edit.taxonomyLevel=Edit subject
 educational.context.deleted=Subject has been successfully deleted.
 educational.context.notdeleted=Subject cannot be deleted, it is probably in use.
@@ -49,6 +51,7 @@ review.process.enabled=Review process
 shares.enabled=Groups
 segment.configuration=Question bank
 segment.educational.context=Levels
+segment.info.page=Infos page
 segment.item.types=Question types
 segment.licenses=Licenses
 segment.pools=Pools
