--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_fr.properties
@@ -6,6 +6,7 @@ admin.licenses.intro=Vous pouvez cr\u00E9er plusieurs types de licence si ceux p
 admin.pools.intro=Cr\u00E9ez un ou plusieurs pools de questions. Un pool est une banque de questions qui permet \u00E0 tous les utilisateurs avec droits d'auteur d'\u00E9changer des \u00E9l\u00E9ments - questions (si en acc\u00E8s public). Vous pouvez \u00E9galement opter pour un pool partag\u00E9 par seulement quelques auteurs, par exemple le personnel d'un d\u00E9partement (en acc\u00E8s priv\u00E9).
 admin.studyfields.intro=Les sujets permettent une indexation technique des questions. Elle est organis\u00E9e comme une structure hi\u00E9rarchique pour mod\u00E9liser les \u00E9ventuels programmes d'\u00E9tudes. S\u00E9lectionner le r\u00E9pertoire "$\:add.taxonomyLevel" afin de cr\u00E9er un nouveau sujet, ou s\u00E9lectionnez un existant pour l'\u00E9diter.
 admin.types.intro=Cr\u00E9er davantage de types de questions si les types par d\u00E9faut ne sont pas suffisants. Veuillez noter que les types de questions par d\u00E9faut ne peuvent pas \u00EAtre supprim\u00E9s.
+create.infos.page=Cr\u00E9er une page d'information
 create.level=Cr\u00E9er un niveau
 create.license=Cr\u00E9er une license
 create.type=Cr\u00E9er un type
@@ -17,6 +18,7 @@ delete.license=Effacer
 delete.license.confirm=Voulez-vous vraiment effacer cette license?
 delete.type=Effacer
 delete.type.confirm=Voulez-vous vraiment effacer ce type?
+edit.info.page=Editer la page d'informations
 edit.taxonomyLevel=Editer le sujet
 educational.context.deleted=Le sujet a \u00E9t\u00E9 effac\u00E9 avec succ\u00E8s.
 educational.context.notdeleted=Le sujet n'a pas pu \u00EAtre effac\u00E9, il est probablement utilis\u00E9.
@@ -30,6 +32,7 @@ level.level=Niveau
 level.translation=Traduction
 license.id=ID
 license.key=License
+segment.info.page=Page d'informations
 selected.taxonomy.tree=Taxonomie
 taxonomyLevel.deleted=Le sujet a \u00E9t\u00E9 effac\u00E9 avec succ\u00E8s.
 taxonomyLevel.notdeleted=Le sujet n'a pas pu \u00EAtre effac\u00E9 avec succ\u00E8s, il est probablement encore utilis\u00E9.
