--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pt_BR.properties
@@ -5,6 +5,7 @@ admin.licenses.intro=Voc\u00EA pode criar mais tipos de licen\u00E7a, se os tipo
 admin.pools.intro=Criar um ou mais grupos de perguntas. O reservat\u00F3rio \u00E9 um banco de perguntas que permite que todos os usu\u00E1rios com direitos de autor a troquem perguntas (acesso p\u00FAblico). Voc\u00EA tamb\u00E9m pode optar por um reservat\u00F3rio com apenas um grupo selecionado de autores. Por exemplo, usu\u00E1rios de um departamento (acesso privado).
 admin.studyfields.intro=Assuntos, permitem a indexa\u00E7\u00E3o t\u00E9cnica de perguntas. \u00C9 organizado como uma estrutura hier\u00E1rquica para modelar potenciais programas de gradua\u00E7\u00E3o. Selecione a op\u00E7\u00E3o "$\:add.taxonomyLevel", a fim de criar um novo assunto, ou selecionar um j\u00E1 existente para fins de edi\u00E7\u00E3o.
 admin.types.intro=Crie mais tipos de perguntas se os tipos existentes n\u00E3o s\u00E3o suficientes. Por favor, note que os tipos de perguntas padr\u00E3o n\u00E3o podem ser exclu\u00EDdos.
+create.infos.page=Criar p\u00E1gina de informa\u00E7\u00F5es
 create.level=Criar n\u00EDvel
 create.license=Criar licen\u00E7a
 create.type=Criar tipo
@@ -16,6 +17,7 @@ delete.taxonomyLevel=Excluir
 delete.taxonomyLevel.confirm=Voc\u00EA realmente quer excluir este assunto "{0}"?
 delete.type=Excluir
 delete.type.confirm=Voc\u00EA realmente deseja excluir este tipo?
+edit.info.page=Editar p\u00E1gina de informa\u00E7\u00F5es
 edit.taxonomyLevel=Editar assunto
 educational.context.deleted=Assunto foi exclu\u00EDdo com sucesso.
 educational.context.notdeleted=Assunto n\u00E3o pode ser exclu\u00EDdo, provavelmente est\u00E1 em uso.
@@ -29,6 +31,7 @@ level.level=N\u00EDvel
 level.translation=Tradu\u00E7\u00E3o
 license.id=ID
 license.key=Licen\u00E7a
+segment.info.page=P\u00E1gina de informa\u00E7\u00F5es
 taxonomyLevel.deleted=Assunto foi exclu\u00EDdo com sucesso.
 taxonomyLevel.notdeleted=O assunto n\u00E3o pode ser exclu\u00EDdo, provavelmente est\u00E1 em uso.
 type.key=ID
