OO-3117: Show master identification in metadata panel, wording

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -121,10 +121,12 @@ menu.database.favorit=Meine Favoriten
 menu.database.favorit.alt=Meine Favoriten
 menu.database.my=Meine Fragen
 menu.database.my.alt=Meine Fragen
+menu.final=Final
 menu.pools=Pool
 menu.pools.alt=Pool
 menu.pools.main=Katalog
 menu.pools.main.alt=Katalog
+menu.review=Beurteilung
 menu.share=Freigaben
 metadatas=Metadaten
 metadata.show=Metadaten anzeigen
