--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
@@ -129,5 +129,6 @@ teach=Teach
 tools=$\:table.header.actions
 type.taxonomy.level=Assign level type
 warning.atleastone.level=You must at least one taxonomy level you can edit.
+warning.atleastone.level.competence=You must at least one taxonomy level.
 warning.delete.level=The level cannot be deleted because it is still in use.
 warning.delete.level.type=The level type "{0}" was not deleted because it is still in use.
