--- a/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/_i18n/LocalStrings_de.properties
@@ -27,6 +27,7 @@ month.long.mar=M\u00E4rz
 month.long.nov=November
 month.long.oct=Oktober
 month.long.sep=September
+selection.no.value=-
 text.element.error.maxvalue=gr\u00F6sster erlaubter Wert ist {0}.
 text.element.error.minvalue=kleinster erlaubter Wert ist {0}.
 text.element.error.notlongerthan=maximal {0} Zeichen erlaubt.
