no-jira: wording

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -130,7 +130,7 @@ qti.form.setting.node=Konfiguration anpassen
 qti.form.show.results=Datumsabh\u00E4ngig
 qti.form.showfeedbacks=Feedbacks anzeigen
 qti.form.summary=\u00DCbersicht Resultate
-qti.form.summary.help=Wenn nur "Aufgabe" gew\u00E4hlt wird, werden die Metadaten pro Frage aufgelistet. Wenn "Korrekte L\u00F6sung" oder "L\u00F6sung vom Teilnehmer" angew\u00E4hlt wird, erscheint nur die L\u00F6sung. Die Fragestellung wird nur angezeigt, wenn "Aufgabe" und zus\u00E4tzlich entweder "Korrekte L\u00F6sung" oder "L\u00F6sung vom Teilnehmer" ausgew\u00E4hlt wird.
+qti.form.summary.help=Wenn nur "Fragezusammenfassung" gew\u00E4hlt wird, werden die Metadaten pro Frage aufgelistet. Wenn "L\u00F6sung" oder "Antwort, vom Teilnehmer abgegeben" angew\u00E4hlt wird, erscheint nur die L\u00F6sung. Die Fragestellung wird nur angezeigt, wenn "Frage unbeantwortet" ausgew\u00E4hlt wird.
 qti.form.summary.metadata=Testzusammenfassung
 qti.form.summary.sections=Sektionszusammenfassung
 qti.form.summary.questions.metadata=Fragezusammenfassung
