--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -131,7 +131,7 @@ qti.form.showfeedbacks=Show feedbacks
 qti.form.summary=Overview results
 qti.form.summary.compact=Compact (without solutions)
 qti.form.summary.detailed=In detail (with solutions)
-qti.form.summary.help=If only "Questions" is selected the metadata for every questions will be shown. If "Solution of the participant" or "Correct solution" is selected, only the solution will be shown. The question text itself is only shown if "Questions" and additionally either "Solution of the participant" or "Correct solution" is selected.
+qti.form.summary.help=If only "Question summary" is selected the metadata for every questions will be shown. If "Answer, submitted by participant" or "Solution" is selected, only the solution will be shown. The question text itself is only shown if "Question, not answered" is selected.
 qti.form.summary.metadata=Test summary
 qti.form.summary.none=No summary neccessary
 qti.form.summary.questions=Question, not answered
