--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
@@ -59,7 +59,7 @@ file.name=Fichier choisi
 hour.short=h
 info.assessment=Pour ce test, les administrateurs et les tuteurs pourront consulter vos r\u00E9sultats. 
 info.nodedelete=Les donn\u00E9es r\u00E9sultant de cet \u00E9l\u00E9ment de cours sont archiv\u00E9es dans votre dossier personnel sous private/archive/[nom du cours]/.
-info.selfassessment=Pour les auto-tests, les données sont sauvées anonymement.
+info.selfassessment=Pour les auto-tests, les donn\u00E9es sont sauv\u00E9es anonymement.
 info.survey=Pour ce questionnaire, vos donn\u00E9es seront enregistr\u00E9es de fa\u00E7on anonyme. 
 info.survey.alreadydone=Vous avez d\u00E9j\u00E0 rempli ce questionnaire, merci beaucoup\! Les questionnaires ne peuvent \u00EAtre remplis qu'une seule fois.
 inform.users=Informer participants
@@ -125,7 +125,7 @@ qti.form.showfeedbacks=Montrer le feedback
 qti.form.summary=Aper\u00E7u r\u00E9sultats
 qti.form.summary.compact=Compact (sans solutions)
 qti.form.summary.detailed=D\u00E9taill\u00E9 (avec solutions)
-qti.form.summary.help=L'option permet de choisir le niveau de d\u00E9tails du rapport des r\u00E9sultats du test.
+qti.form.summary.help=Si l'option "R\u00E9sum\u00E9 question" est s\u00E9lectionn\u00E9e seule, les m\u00E9ta-donn\u00E9es seront visibles. Si "R\u00E9ponse, soumise par le participant" ou "Solution" sont s\u00E9lectionn\u00E9s, seule la solution sera visible. Le texte de la question ne sera visible qu'avec l'option "Question, sans r\u00E9ponse" s\u00E9lectionn\u00E9e.
 qti.form.summary.metadata=R\u00E9sum\u00E9 du test
 qti.form.summary.none=Aucune entr\u00E9e n\u00E9cessaire
 qti.form.summary.questions=Question, sans r\u00E9ponse
