OO-3226: security callback for question bank based on taxonomy

--- a/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_de.properties
@@ -51,7 +51,8 @@ restrictToInstResourceManagersAndAuthorsSiteSecurityCallback=Autoren und Lernres
 restrictToUserManagerSiteSecurityCallback=Benutzerverwalter
 restrictToGroupManagerSiteSecurityCallback=Gruppenverwalter
 restrictToPoolAdminSiteSecurityCallback=Poolverwalter
-taxonomySiteSecurityCallback=Kompetenzbasiert gemäss Taxonomiekonfiguration 
+taxonomySiteSecurityCallback=Kompetenzbasiert gemäss Taxonomiekonfiguration
+poolTaxonomySiteSecurityCallback=Poolverwalter und Kompetenz
 poolPrivateMembersSiteSecurityCallback=Poolmitglieder und Poolverwalter
 authorAndPoolPrivateMembersSiteSecurityCallback=Autoren, Poolmitglieder und Poolverwalter
 VideoSiteDef=LearnTube
