--- a/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_en.properties
@@ -28,6 +28,7 @@ defaultSiteSecurityCallback=All, including guests and invitee
 disabledSiteSecurityCallback=Disabled
 down=Down
 managersSiteSecurityCallback=Managers
+poolTaxonomySiteSecurityCallback=Question bank admins and competence
 poolPrivateMembersSiteSecurityCallback=Question bank admins and members
 registredOrGuestSiteSecurityCallback=Registered users and guests without invitee
 registredSiteSecurityCallback=Registered users without guests/invitee
