no-jira: Wording

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -193,7 +193,7 @@ share.item=Freigeben
 share.options=Wollen Sie anderen Personen erlauben diese Frage(n) zu bearbeiten?
 share.pool=Zu Pool freigeben
 shared=Freigegeben
-wharing.shares=Gruppen
+sharing.shares=Gruppen
 sharing.shares.empty.table=Diese Frage ist mit keiner Gruppe freigegeben.
 sharing.pools.empty.table=Diese Frage ist in keinem Pool freigegeben.
 source.status.draft=$\:lifecycle.status.draft ({0})
